[package]
name = "ttgo_t_watch_2020_rust"
version = "0.1.0"
authors = ["agrucza"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.7.0"
esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32"] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
axp20x = "0.0.1"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
